scrollbar fix

--- a/public/css/comparisons.css
+++ b/public/css/comparisons.css
@@ -264,10 +264,10 @@ ul {
 #content, #content_placeholder {
   position: absolute;
   top: 0;
+  bottom: 0;
   left: calc(50% + 150px);
   width: calc(100% - 300px);
-/*   max-width: 70%; */
-	
+  /*   max-width: 70%; */
   transform: translateX(-50%);
   z-index: 0;
   margin: 0 auto;
@@ -285,6 +285,9 @@ ul {
 
 #comps {
   width: 100%;
+  position: absolute;
+  top: 4em;
+  bottom: 0;
   overflow-x: scroll;
   text-align: center;
   white-space: nowrap;
